--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,7 @@ services:
     env: python
     plan: starter
     buildCommand: pip install -r requirements.txt
-    startCommand: >
-      bash -lc 'ln -sf /data/eod.db ./eod.db; uvicorn app.main:app --host 0.0.0.0 --port $PORT'
+    startCommand: bash -lc 'ln -sf /data/eod.db ./eod.db; uvicorn app.main:app --host 0.0.0.0 --port $PORT'
     healthCheckPath: /health
     disk:
       name: eod-snapshots
@@ -31,8 +30,7 @@ services:
     plan: starter
     schedule: "0 22 * * *"  # ~5:00pm Chicago during daylight time
     buildCommand: "true"
-    startCommand: >
-      bash -lc 'curl -fsS -X POST "http://$DASHBOARD_HOSTPORT/ingest/live" || exit 1'
+    startCommand: bash -lc 'curl -fsS -X POST "http://$DASHBOARD_HOSTPORT/ingest/live" || exit 1'
     envVars:
       - key: DASHBOARD_HOSTPORT
         fromService:
