--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: starter
     buildCommand: pip install -r requirements.txt
     startCommand: bash -lc 'ln -sf /data/eod.db ./eod.db; uvicorn app.main:app --host 0.0.0.0 --port $PORT'
-    healthCheckPath: /health
+    healthCheckPath: /
     disk:
       name: eod-snapshots
       mountPath: /data
@@ -23,6 +23,7 @@ services:
         sync: false
       - key: TZ
         value: America/Chicago
+        
 
   - type: cron
     name: eod-live-ingest
