--- a/rhome_eod_webapp/requirements.txt
+++ b/rhome_eod_webapp/requirements.txt
@@ -1,9 +1,4 @@
-fastapi
-uvicorn
-jinja2
-python-dotenv
-requests
-pandas
-numpy
-matplotlib
-sqlite-utils
+fastapi==0.111.0
+uvicorn[standard]==0.30.1
+jinja2==3.1.4
+httpx==0.27.0
